# simple-card-game

./: README.md  play_game.py  pyproject.toml
src/: card.py  deck.py  hand.py  main.py  player.py  table.py
src/simple_card_game/: deck.py  game.py  hand.py  player.py  table.py
tests/: test_hand.py  test_player.py
